<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.subi.scard.view.fragment.health.HealthViewmodel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/tool_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/sex_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:background="@drawable/text_styles"
                style="@style/healthStyle" />

            <TextView
                android:id="@+id/height_text"
                style="@style/healthStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <TextView
                android:id="@+id/weight_text"
                style="@style/healthStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <TextView
                android:id="@+id/blood_type_text"
                style="@style/healthStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_type" />

            <TextView
                android:id="@+id/bust_text"
                style="@style/healthStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bust" />

            <TextView
                android:id="@+id/waist_text"
                style="@style/healthStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waist" />

            <TextView
                android:id="@+id/hip_text"
                style="@style/healthStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hip" />
        </LinearLayout>
    </LinearLayout>
</layout>